# HeuristiX

./: .gitignore  .gitmodules  Question_answered.md  README.md  RESULTS.md  TODO.md  pyproject.toml  run_ablation.sh
configs/: default.yaml
heuristix/: __init__.py  amure_client.py  cli.py  config.py
heuristix/evaluation/: __init__.py  cascade.py  metrics.py  runner.py
heuristix/evolution/: __init__.py  manager.py  operators.py  population.py
heuristix/knowledge/: __init__.py  distillation.py  embeddings.py  selection.py
heuristix/llm/: __init__.py  prompts.py  provider.py
heuristix/problems/: __init__.py  base.py
heuristix/problems/jssp/: __init__.py  benchmarks.py  benchmarks_known.py  problem.py  simulator.py
idea/: idea_v1.md
paper-md/: ReasoningBank_상세설명.md  SeEvo_DFJSSP.md
paper_md/: AlphaEvolve.md  Evolution_of_Heuristics.md  FunSearch.md  ReasoningBank.md
tests/: test_simulator.py
